force-app/main/default/objects/Opportunity/fields/A40_Product_on_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>A40_Product_on_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SDS-3020</description>
    <label>A40 Product on Opportunity</label>
    <type>Checkbox</type>
</CustomField>