force-app/main/default/objects/Opportunity/fields/Account_Industry__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry__c</fullName>
    <formula>TEXT( Account.Industry )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Industry</label>
    <type>Text</type>
</CustomField>