force-app/main/default/objects/Opportunity/fields/Account_Industry_Override_Reason__c.field-meta.xml
<CustomField>
    <fullName>Account_Industry_Override_Reason__c</fullName>
    <description>SDS-1212
Updated: SDS-1463</description>
    <inlineHelpText>Used to denote the reason why the Opportunity Industry is different from the Account Industry</inlineHelpText>
    <label>Account Industry Override Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>