force-app/main/default/objects/Opportunity/fields/Account_Status_Active_Inactive__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Active_Inactive__c</fullName>
    <formula>IMAGE(IF( Account.Inactive__c = true, &quot;/resource/Account_Status_Flag_InActive&quot;, &quot;/resource/Account_Status_Flag_Active&quot;),  IF(Account.Inactive__c = true, &quot;Inactive&quot;, &quot;Active&quot;) )</formula>
    <label>Active/Inactive</label>
    <type>Text</type>
</CustomField>