force-app/main/default/objects/Opportunity/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <description>Used by the OpportunityReport page</description>
    <formula>Account.Name</formula>
    <label>AccountName</label>
    <type>Text</type>
</CustomField>