force-app/main/default/objects/Opportunity/fields/Activate_Automated_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Activate_Automated_Outreach__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate vGPU Automated Outreach</label>
    <type>Checkbox</type>
</CustomField>