force-app/main/default/objects/Opportunity/fields/Activate_DGX_Automated_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Activate_DGX_Automated_Outreach__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SDS-1330</description>
    <label>Activate DGX Automated Outreach</label>
    <type>Checkbox</type>
</CustomField>