force-app/main/default/objects/Opportunity/fields/Activate_vGPU_DGX_Outreach_China__c.field-meta.xml
<CustomField>
    <fullName>Activate_vGPU_DGX_Outreach_China__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate vGPU/DGX Outreach China</label>
    <type>Checkbox</type>
</CustomField>