force-app/main/default/objects/Opportunity/fields/Activate_vGPU_DGX_Outreach_Japan__c.field-meta.xml
<CustomField>
    <fullName>Activate_vGPU_DGX_Outreach_Japan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SDS-1875 - Sales: Create process builder for Japan to do automated outreach</description>
    <label>Activate vGPU/DGX Outreach Japan</label>
    <type>Checkbox</type>
</CustomField>