force-app/main/default/objects/Opportunity/fields/Additional_Customer_Use_Cases__c.field-meta.xml
<CustomField>
    <fullName>Additional_Customer_Use_Cases__c</fullName>
    <label>Additional Customer Workload</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Autonomous vehicle</fullName>
            </value>
            <value>
                <fullName>Data Analytics (Not ML or DL)</fullName>
            </value>
            <value>
                <fullName>Deep Learning – Inferencing</fullName>
            </value>
            <value>
                <fullName>Deep Learning – Training</fullName>
            </value>
            <value>
                <fullName>Design and Content Creation</fullName>
            </value>
            <value>
                <fullName>Graphics Virtualization (vGPU)</fullName>
            </value>
            <value>
                <fullName>High Performance Computing (HPC)</fullName>
            </value>
            <value>
                <fullName>Industrial Inspection</fullName>
            </value>
            <value>
                <fullName>Infrastructure as a Service</fullName>
            </value>
            <value>
                <fullName>Intelligent Video Analytics (IVA)</fullName>
            </value>
            <value>
                <fullName>Machine Learning (Not DL)</fullName>
            </value>
            <value>
                <fullName>Medical Imaging</fullName>
            </value>
            <value>
                <fullName>Predictive Maintenance</fullName>
            </value>
            <value>
                <fullName>Rendering </fullName>
            </value>
            <value>
                <fullName>Scalable Visualization Solutions (SVS)</fullName>
            </value>
            <value>
                <fullName>Virtual &amp; Augmented Reality (VR/AR)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>