force-app/main/default/objects/Opportunity/fields/Agree_with_Opportunity_Values__c.field-meta.xml
<CustomField>
    <fullName>Agree_with_Opportunity_Values__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>If you would like to copy to corresponding opportunity values, leave this field checked. To update the sales leader fields, uncheck this box.</inlineHelpText>
    <label>Copy Opp Values</label>
    <type>Checkbox</type>
</CustomField>