force-app/main/default/objects/Opportunity/fields/Agreement_Type__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Type__c</fullName>
    <description>For EDW Sales process</description>
    <label>Agreement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LTB</fullName>
            </value>
            <value>
                <fullName>Long Life Deal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>