force-app/main/default/objects/Opportunity/fields/AI_GPUs__c.field-meta.xml
<CustomField>
    <fullName>AI_GPUs__c</fullName>
    <description>SDS-2531</description>
    <label>AI GPUs</label>
    <summarizedField>OpportunityLineItem.Quantity</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Use_Case__c</field>
        <operation>equals</operation>
        <value>AI</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>