force-app/main/default/objects/Opportunity/fields/Amount_Redeemed_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>Amount_Redeemed_by_Customer__c</fullName>
    <label>Amount Redeemed by Customer</label>
    <summarizedField>Service_Delivery__c.Amount_Redeemed__c</summarizedField>
    <summaryForeignKey>Service_Delivery__c.Opportunity__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>