force-app/main/default/objects/Opportunity/fields/Amount_Remaining_to_be_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>Amount_Remaining_to_be_Redeemed__c</fullName>
    <formula>Amount -  Amount_Redeemed_by_Customer__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Amount Remaining to be Redeemed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>