force-app/main/default/objects/Opportunity/fields/App_to_Accelerate_for_Biggest_Impact_del__c.field-meta.xml
<CustomField>
    <fullName>App_to_Accelerate_for_Biggest_Impact_del__c</fullName>
    <inlineHelpText>Identify the most important current application to speed up or new application to accelerate to increase our win probability and/or increase the number of GPUs in this opportunity.</inlineHelpText>
    <label>1 App to Accelerate for Biggest Impact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>