force-app/main/default/objects/Opportunity/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <inlineHelpText>Select the Application type that fits this opportunity</inlineHelpText>
    <label>Application Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In-House</fullName>
            </value>
            <value>
                <fullName>ISVs</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>