force-app/main/default/objects/Opportunity/fields/Apps_Accelerated_Future_Improvements__c.field-meta.xml
<CustomField>
    <fullName>Apps_Accelerated_Future_Improvements__c</fullName>
    <inlineHelpText>What percentage of the workload could be further accelerated/optimized over the next 12 months?  Consult with your Team of 4 (T04) to determine.</inlineHelpText>
    <label>% Apps Accelerated-Future Incremental</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>20%</fullName>
            </value>
            <value>
                <fullName>30%</fullName>
            </value>
            <value>
                <fullName>40%</fullName>
            </value>
            <value>
                <fullName>50%</fullName>
            </value>
            <value>
                <fullName>60%</fullName>
            </value>
            <value>
                <fullName>70%</fullName>
            </value>
            <value>
                <fullName>80%</fullName>
            </value>
            <value>
                <fullName>90%</fullName>
            </value>
            <value>
                <fullName>100%</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>