force-app/main/default/objects/Opportunity/fields/Architecture_Review_Board_ARB_Complete__c.field-meta.xml
<CustomField>
    <fullName>Architecture_Review_Board_ARB_Complete__c</fullName>
    <description>SuperPod ACE is a validation and design review with DGX SuperPod experts at NVIDIA to ensure project success</description>
    <inlineHelpText>Scalable Design Meeting with DGX Prod Mgmt/NVPS/SAs/SMEs to enable customer success. For 10+ DGX Systems.</inlineHelpText>
    <label>AI Center of Excellence (ACE) Complete?</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>DGX_POD_Design__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>