force-app/main/default/objects/Opportunity/fields/At_Risk_for_CQ_Revenue__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_for_CQ_Revenue__c</fullName>
    <description>Highlight risk for current quarter revenue?</description>
    <inlineHelpText>Sales Leaders, use this field to state if there are any risks to current quarter revenue on this opp. This includes potential inventory use or PO delays. This is not related to sales credit.</inlineHelpText>
    <label>Revenue Risk?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>