force-app/main/default/objects/Opportunity/fields/At_Risk_Indicator__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Indicator__c</fullName>
    <formula>IMAGE( 
CASE( At_Risk_Level__c, 
&quot;--None--&quot;, &quot;https://na2.salesforce.com/img/samples/light_green.gif&quot;,
&quot;Low&quot;, &quot;https://na2.salesforce.com/img/samples/light_green.gif&quot;,
&quot;Medium&quot;, &quot;https://na2.salesforce.com/img/samples/light_yellow.gif&quot;,
&quot;High&quot;, &quot;https://na2.salesforce.com/img/samples/light_red.gif&quot;, 
&quot;/s.gif&quot;), 
&quot;status color&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>At Risk Indicator</label>
    <type>Text</type>
</CustomField>