force-app/main/default/objects/Opportunity/fields/At_Risk_Level__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Level__c</fullName>
    <inlineHelpText>Risk of losing deal.   Low = no issues.  Med = some issues that could block deal.  High = critical issues that could lose deal.  Must fill-out &quot;Blocking / Help Needed&quot; field.
Medium or High will trigger email notification to management.</inlineHelpText>
    <label>At Risk Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Low</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>