force-app/main/default/objects/Opportunity/fields/Auto_BU_Priority__c.field-meta.xml
<CustomField>
    <fullName>Auto_BU_Priority__c</fullName>
    <label>Auto BU Priority</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>P1</fullName>
            </value>
            <value>
                <fullName>P2</fullName>
            </value>
            <value>
                <fullName>P3</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>TBD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>