force-app/main/default/objects/Opportunity/fields/Autonomy_Level__c.field-meta.xml
<CustomField>
    <fullName>Autonomy_Level__c</fullName>
    <label>Autonomy Level</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Automotive_Segment__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Level 2</fullName>
            </value>
            <value>
                <fullName>Level 3</fullName>
            </value>
            <value>
                <fullName>Level 4</fullName>
            </value>
            <value>
                <fullName>Level 5</fullName>
            </value>
            <value>
                <fullName>N/A</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>