force-app/main/default/objects/Opportunity/fields/Benefit_Tracking_Metric__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Tracking_Metric__c</fullName>
    <description>JIRA #SDS-2699</description>
    <inlineHelpText>How will the event, program or benefits be tracked and measured (POS, MQL/SQL, QBR etc.)?</inlineHelpText>
    <label>Benefit Tracking Metric</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>POS</fullName>
            </value>
            <value>
                <fullName>MQL/SQL</fullName>
            </value>
            <value>
                <fullName>QBR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>