force-app/main/default/objects/Opportunity/fields/Blocking_Issues__c.field-meta.xml
<CustomField>
    <fullName>Blocking_Issues__c</fullName>
    <inlineHelpText>Be as descriptive as possible for any issues that could potentially block this deal.  If the deal is at risk, fill out &quot;At Risk&quot; field above</inlineHelpText>
    <label>Blocking Issues / Help Needed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>