force-app/main/default/objects/Opportunity/fields/BRNSHRK__ContentLastSentDate__c.field-meta.xml
<CustomField>
    <fullName>BRNSHRK__ContentLastSentDate__c</fullName>
    <label>Content Last Sent Date</label>
    <type>DateTime</type>
</CustomField>