force-app/main/default/objects/Opportunity/fields/Business_Approval_SW_Upgrade_Text__c.field-meta.xml
<CustomField>
    <fullName>Business_Approval_SW_Upgrade_Text__c</fullName>
    <description>Populates per Field Update WF (Update Tegra Business Approval (SW) - Text) based on selection made to the Business Approval (SW Upgrade) field.  Used to populate text onto email notification.</description>
    <label>Business Approval (SW Upgrade) - Text</label>
    <length>30</length>
    <type>Text</type>
</CustomField>