force-app/main/default/objects/Opportunity/fields/Business_Approval_Text__c.field-meta.xml
<CustomField>
    <fullName>Business_Approval_Text__c</fullName>
    <description>Populates per Field Update WF (Update Tegra Business Approval - Text) based on selection made to the Business Approval field.</description>
    <label>Business Approval - Text</label>
    <length>30</length>
    <type>Text</type>
</CustomField>