force-app/main/default/objects/Opportunity/fields/Channel_Partners_Associated__c.field-meta.xml
<CustomField>
    <fullName>Channel_Partners_Associated__c</fullName>
    <description>The channel route associated to this deal.</description>
    <inlineHelpText>Based on how the PO is flowing through the channel, please enter the Channel Partners associated.</inlineHelpText>
    <label>Channel Partners Associated</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Strategic OEM/Non-NPN VAR/Customer</fullName>
            </value>
            <value>
                <fullName>Strategic OEM/NPN VAR/Customer</fullName>
            </value>
            <value>
                <fullName>Strategic OEM/Customer</fullName>
            </value>
            <value>
                <fullName>Disti/NPN VAR/Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>