force-app/main/default/objects/Opportunity/fields/City_of_iCafe__c.field-meta.xml
<CustomField>
    <fullName>City_of_iCafe__c</fullName>
    <label>City of iCafe</label>
    <length>100</length>
    <type>Text</type>
</CustomField>