force-app/main/default/objects/Opportunity/fields/City_of_Supplier_SI__c.field-meta.xml
<CustomField>
    <fullName>City_of_Supplier_SI__c</fullName>
    <label>City of Supplier/SI</label>
    <length>100</length>
    <type>Text</type>
</CustomField>