force-app/main/default/objects/Opportunity/fields/Claiming_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Claiming_Period_End_Date__c</fullName>
    <description>Claiming Period End Date</description>
    <inlineHelpText>Claiming Period End Date</inlineHelpText>
    <label>Claiming Period End Date</label>
    <type>Date</type>
</CustomField>