force-app/main/default/objects/Opportunity/fields/Claiming_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Claiming_Period_Start_Date__c</fullName>
    <description>Claiming Period Start Date</description>
    <inlineHelpText>Claiming Period Start Date</inlineHelpText>
    <label>Claiming Period Start Date</label>
    <type>Date</type>
</CustomField>