force-app/main/default/objects/Opportunity/fields/Close_Date_Compliance_Issue__c.field-meta.xml
<CustomField>
    <fullName>Close_Date_Compliance_Issue__c</fullName>
    <description>formula fields to support Weekly Commit (SDS-1104)</description>
    <formula>AND(Not(IsClosed) , CloseDate &lt; Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Close Date Compliance Issue</label>
    <type>Checkbox</type>
</CustomField>