force-app/main/default/objects/Opportunity/fields/Closed_Comments__c.field-meta.xml
<CustomField>
    <fullName>Closed_Comments__c</fullName>
    <label>Closed Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>