force-app/main/default/objects/Opportunity/fields/Closed_Comments_Automotive__c.field-meta.xml
<CustomField>
    <fullName>Closed_Comments_Automotive__c</fullName>
    <description>JIRA#SDS-1779: This field is being used by Automotive team on both &apos;Closed Won&apos; and &apos;Closed Lost&apos; status of the Opportunity.</description>
    <inlineHelpText>For Closed Lost, include specific reason for loss.For Closed Won, include specific commentary that the end goal of the engagement is achieved. Signing agreements, shipping DRIVE Platform, or completing a Demo are not reasons to move the opportunity to Won</inlineHelpText>
    <label>Closed Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>