force-app/main/default/objects/Opportunity/fields/Closed_Lost_Comments__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Comments__c</fullName>
    <inlineHelpText>For all Closed Lost Opportunities, include specific commentary for reason for loss.</inlineHelpText>
    <label>Closed Lost Comments</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>