force-app/main/default/objects/Opportunity/fields/Closed_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Closed_Lost_Reason__c</fullName>
    <label>Closed Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Budget</fullName>
            </value>
            <value>
                <fullName>Competition</fullName>
            </value>
            <value>
                <fullName>Customer using a cloud based solution</fullName>
            </value>
            <value>
                <fullName>Duplicate Opportunity</fullName>
            </value>
            <value>
                <fullName>Other NVIDIA Solution</fullName>
            </value>
            <value>
                <fullName>Product Availability</fullName>
            </value>
            <value>
                <fullName>Program Cancelled</fullName>
            </value>
            <value>
                <fullName>Quality</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Pipeline Cleanup</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>