force-app/main/default/objects/Opportunity/fields/Cloud_Service_Provider_CSP_Type__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Service_Provider_CSP_Type__c</fullName>
    <label>Cloud Service Provider (CSP) Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>External</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Inference</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>