force-app/main/default/objects/Opportunity/fields/Cloud_Service_Providers__c.field-meta.xml
<CustomField>
    <fullName>Cloud_Service_Providers__c</fullName>
    <inlineHelpText>Select the NPN CSP that applies to this specific opportunity. 
If not sure, state &quot;Other&quot;. However, this field should be updated from &quot;Other&quot; to an NPN CSP
when the opportunity moves to &quot;Closed Won&quot; stage.</inlineHelpText>
    <label>Cloud Service Providers</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Sold_thru_Cloud_Svc_Provider__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amazon (AWS)</fullName>
            </value>
            <value>
                <fullName>Alibaba (Aliyun)</fullName>
            </value>
            <value>
                <fullName>Google Cloud</fullName>
            </value>
            <value>
                <fullName>IBM (Bluemix)</fullName>
            </value>
            <value>
                <fullName>Microsoft (Azure)</fullName>
            </value>
            <value>
                <fullName>Tencent</fullName>
            </value>
            <value>
                <fullName>Blue Sky Systems</fullName>
            </value>
            <value>
                <fullName>Carolinas IT</fullName>
            </value>
            <value>
                <fullName>Cloudalize</fullName>
            </value>
            <value>
                <fullName>PlayKey</fullName>
            </value>
            <value>
                <fullName>Advance2000</fullName>
            </value>
            <value>
                <fullName>Approach Technology</fullName>
            </value>
            <value>
                <fullName>Epigrid</fullName>
            </value>
            <value>
                <fullName>FNW</fullName>
            </value>
            <value>
                <fullName>Komplett Group</fullName>
            </value>
            <value>
                <fullName>LightEdge Solutions</fullName>
            </value>
            <value>
                <fullName>Magic Cloud</fullName>
            </value>
            <value>
                <fullName>Nimbix</fullName>
            </value>
            <value>
                <fullName>SCC UK</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>