force-app/main/default/objects/Opportunity/fields/Co_Location_COLO_Partner__c.field-meta.xml
<CustomField>
    <fullName>Co_Location_COLO_Partner__c</fullName>
    <businessOwnerUser>andriaz@nvidia.com.trprod</businessOwnerUser>
    <label>Co-Location (COLO) Partner</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Co_Location_COLO_Partner_Engaged__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aligned Energy</fullName>
            </value>
            <value>
                <fullName>Colovore</fullName>
            </value>
            <value>
                <fullName>Core Scientific</fullName>
            </value>
            <value>
                <fullName>Cyrus One</fullName>
            </value>
            <value>
                <fullName>Cyxtera</fullName>
            </value>
            <value>
                <fullName>Data Dock</fullName>
            </value>
            <value>
                <fullName>Digital Realty</fullName>
            </value>
            <value>
                <fullName>EdgeConneX</fullName>
            </value>
            <value>
                <fullName>Equinix</fullName>
            </value>
            <value>
                <fullName>Flexential</fullName>
            </value>
            <value>
                <fullName>Fujitsu</fullName>
            </value>
            <value>
                <fullName>IDCF</fullName>
            </value>
            <value>
                <fullName>Interxion</fullName>
            </value>
            <value>
                <fullName>NTT Communications</fullName>
            </value>
            <value>
                <fullName>NTT Data</fullName>
            </value>
            <value>
                <fullName>Scalematrix</fullName>
            </value>
            <value>
                <fullName>Switch</fullName>
            </value>
            <value>
                <fullName>Vantage</fullName>
            </value>
            <value>
                <fullName>Verne Global</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>