force-app/main/default/objects/Opportunity/fields/Co_Location_COLO_Partner_Engaged__c.field-meta.xml
<CustomField>
    <fullName>Co_Location_COLO_Partner_Engaged__c</fullName>
    <businessOwnerUser>andriaz@nvidia.com.trprod</businessOwnerUser>
    <label>Co-Location (COLO) Partner Engaged</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>